[hotfix] Fix image parser for adapters